--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,13 @@ body {
   margin: 0;
   padding: 0;
 }
+.header-footer-positiion {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  background-color: #c1272d;
+  align-items: center;
+}
 /* STYLES */
 .mobile-menu {
   display: none;
@@ -40,7 +47,6 @@ body {
 }
 .mobile-menu ul li a {
   text-decoration: none;
-  color: white;
   color: #f1a1a1;
   font-weight: lighter;
   font-size: 18px;
@@ -55,8 +61,8 @@ header {
   display: flex;
   flex-direction: row;
   background-color: #c1272d;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
   text-align: center;
   width: inherit;
   color: white;
@@ -65,8 +71,13 @@ header {
   font-weight: bolder;
   margin: 0 auto;
 }
-header p {
-  margin-left: 20px;
+header a {
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: bolder;
+  font-size: 22px;
+  margin: 0% 20px;
+  margin: 20px 20px;
 }
 header span {
   font-weight: lighter;
@@ -94,7 +105,6 @@ header .burger {
   }
   header .nav-bar a {
     text-decoration: none;
-    color: white;
     color: #f1a1a1;
     font-weight: lighter;
     font-size: 14px;
@@ -122,7 +132,6 @@ footer {
   display: flex;
   flex-direction: row;
   background-color: #c1272d;
-  justify-content: flex-start;
   align-items: center;
   text-align: left;
 }
