--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ header .header-divide {
   height: 10px;
 }
 main {
-  height: 83vh;
+  /*height: 83vh;*/
 }
 footer {
   position: relative;
@@ -138,4 +138,63 @@ footer {
 footer p {
   margin: 10px 10px;
   color: white;
+}
+/**/
+.application_block_head {
+  height: 40vw;
+  min-height: 150px;
+  max-height: 250px;
+  background: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: 4px dashed #c1272d;
+}
+.application_block_head p {
+  text-transform: uppercase;
+  font-weight: bolder;
+  text-align: center;
+  color: #c1272d;
+  font-size: 32px;
+}
+.application_block_text {
+  padding-left: 15vw;
+  padding-right: 15vw;
+  padding-top: 50px;
+}
+.application_block_text p {
+  font-size: 18px;
+  margin-bottom: 0;
+  hyphens: auto;
+}
+@media (max-width: 992px) {
+  .application_block_text {
+    padding-top: 0;
+  }
+  .application_block_text p {
+    font-size: 16px;
+  }
+}
+.application_block_button {
+  width: 100%;
+  height: 30vw;
+  min-height: 50px;
+  max-height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.application_block_button .application_button {
+  height: 50px;
+  width: 150px;
+  background: #c1272d;
+}
+.application_block_button .application_button p {
+  margin-top: 4px;
+  text-transform: uppercase;
+  font-weight: bolder;
+  text-align: center;
+  color: white;
+  font-size: 18px;
 }
