--- a/less/main.less
+++ b/less/main.less
@@ -105,7 +105,7 @@ header {
 }
 
 main {
-	height: 83vh;
+	/*height: 83vh;*/
 }
 
 footer {
@@ -113,4 +113,75 @@ footer {
 	text-align: left;
 	p { margin: 10px 10px; color: white;}
 }
+
 /**/
+.application_block_head{
+	height: 40vw;
+	min-height: 150px;
+	max-height: 250px;
+	background: #000;
+
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+	p{
+		text-transform: uppercase;
+		font-weight: bolder;
+		text-align:center;
+		color: @h-m-background;
+		font-size: 32px;
+	}
+
+	border-bottom:  4px dashed @h-m-background;
+}
+
+.application_block_text{
+	@paddParam: 15vw;
+	padding-left: @paddParam;
+	padding-right: @paddParam;
+	padding-top: 50px;
+
+	p{
+		font-size: 18px;
+		margin-bottom: 0;
+		hyphens: auto;
+	}
+
+	@media (max-width: 992px) {
+		padding-top: 0;
+
+		p{
+			font-size: 16px;
+		}
+	}
+}
+
+.application_block_button{
+	width: 100%;
+	height: 30vw;
+	min-height: 50px;
+	max-height: 150px;
+
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	flex-direction: column;
+
+	.application_button{
+		height: 50px;
+		width: 150px;
+
+		p{
+			margin-top: 4px;
+			text-transform: uppercase;
+			font-weight: bolder;
+			text-align:center;
+			color: white;
+			font-size: 18px;
+		}
+
+		background: @h-m-background;
+	}
+}
+
