--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
  /* COLORS */
 @h-m-background: #c1272d;
 
+
 /* BASIC CONFIG */
 
 body {
@@ -13,7 +14,7 @@ body {
 	color: @clr;
 	font-weight: @wgh;
 	font-size: @fz;
-	margin: 0% 20px;
+
 }
 
 .header-b-font(@fz: 20px) {
@@ -57,6 +58,7 @@ body {
 		list-style: none;
 		a {
 			.non-decoration-links();
+				margin: 0% 20px;
 			&:active {
 				font-weight: bold;
 				color: white;
@@ -71,18 +73,25 @@ header {
 	justify-content: space-around;
 	text-align: center;
 	width: inherit; 
-	.header-b-font(24px);
+	color: @h-m-background;
 	a { 
 		.non-decoration-links(@clr:white, @fz: 22px, @wgh: bolder); 
 		margin: 20px 20px; 
 	}
-	span { font-weight: lighter; }
+	span { font-weight: lighter; width: 50px;}
 	margin: 0 auto;
-	.burger {margin: 3% 0% 3% 1%; .header-b-font;} 
+	.burger {margin: 3% 0% 3% 1%; color: @h-m-background;} 
 
 	@media (max-width: 992px) {
+		background-color: white;
+font-size: 22px;
+	font-weight: bold;
+	text-transform: uppercase;
 		.nav-bar { display: none; }
 		.header-divide1 { display: none; }
+		.home-nav-bar { display: none; }
+		.home-header-title { display: flex; }
+		.home-header-divide { width: 5%; }
 	}
 
 	@media (min-width: 992px) {
@@ -91,12 +100,28 @@ header {
 	 	flex-direction: row;
 	 	align-items: center;
 			a { 
-				.non-decoration-links(@clr:#f1a1a1, @fz: 14px, @wgh: lighter);
-				&:hover { color: white; }
+				.non-decoration-links(@clr:#f1a1a1, @fz: 18px, @wgh: lighter);
+				margin: 0% 20px;
+				&:hover { color: white; font-weight: bold; }
 			}
 	 	}
+	 	.home-nav-bar {
+	 		a { 
+	 			.non-decoration-links(@clr:#f1a1a1, @fz: 18px, @wgh: lighter); 
+	 			text-transform: uppercase;
+				&:hover { color: white; font-weight: bold;}
+	 			&:active {
+					font-weight: bold;
+					color: white;
+				} 
+	 		}
+	 		margin:20px 0;
+	 	}
+	 	.home-header-title { display: none; }
 	 	.header-divide1 { display: block; width: 35%; }
+	 	.home-header-divide { display: none; }
 	 	.burger { display: none; }
+	 	
 	}
 
 	.header-divide {
@@ -105,7 +130,27 @@ header {
 }
 
 main {
-	height: 83vh;
+	.home-container {
+		display: flex;
+	    justify-content: center;
+		min-height: 74vh;
+	    padding: 40px 0px;
+	 
+		img { height: 73vh;  }
+		@media (min-width: 992px) {
+			.student_mobile { display: none; }	
+			background: url(../img/background.jpg);
+			background-size: cover;
+		}
+		@media (max-width: 992px) {
+			.student_mobile { display: block; width: 100%; height: 100%; }
+			.student_desktop { display: none; }
+			background: url(../img/test.jpg) no-repeat;
+			background-size: 150%;
+    		background-origin: content-box;
+    		background-position: center;
+		}		
+	}
 }
 
 footer {
