--- a/less/main.less
+++ b/less/main.less
@@ -14,7 +14,6 @@ body {
 	color: @clr;
 	font-weight: @wgh;
 	font-size: @fz;
-
 }
 
 .header-b-font(@fz: 20px) {
@@ -74,19 +73,22 @@ header {
 	text-align: center;
 	width: inherit; 
 	color: @h-m-background;
+
 	a { 
 		.non-decoration-links(@clr:white, @fz: 22px, @wgh: bolder); 
 		margin: 20px 20px; 
 	}
+
 	span { font-weight: lighter; width: 50px;}
 	margin: 0 auto;
 	.burger {margin: 3% 0% 3% 1%; color: @h-m-background;} 
+	.header-divide { height: 10px; }
 
 	@media (max-width: 992px) {
 		background-color: white;
-font-size: 22px;
-	font-weight: bold;
-	text-transform: uppercase;
+		font-size: 22px;
+		font-weight: bold;
+		text-transform: uppercase;
 		.nav-bar { display: none; }
 		.header-divide1 { display: none; }
 		.home-nav-bar { display: none; }
@@ -96,36 +98,30 @@ font-size: 22px;
 
 	@media (min-width: 992px) {
 		.nav-bar {
-	 	display: flex;
-	 	flex-direction: row;
-	 	align-items: center;
+	 		display: flex;
+	 		flex-direction: row;
+	 		align-items: center;
+
 			a { 
 				.non-decoration-links(@clr:#f1a1a1, @fz: 18px, @wgh: lighter);
 				margin: 0% 20px;
 				&:hover { color: white; font-weight: bold; }
-			}
+			  }
 	 	}
 	 	.home-nav-bar {
 	 		a { 
 	 			.non-decoration-links(@clr:#f1a1a1, @fz: 18px, @wgh: lighter); 
 	 			text-transform: uppercase;
-				&:hover { color: white; font-weight: bold;}
-	 			&:active {
-					font-weight: bold;
-					color: white;
-				} 
+				&:hover { color: white; font-weight: bold; }
+	 			&:active { font-weight: bold; color: white; } 
 	 		}
 	 		margin:20px 0;
 	 	}
+
+	 	.home-header-divide { display: none; }
 	 	.home-header-title { display: none; }
 	 	.header-divide1 { display: block; width: 35%; }
-	 	.home-header-divide { display: none; }
 	 	.burger { display: none; }
-	 	
-	}
-
-	.header-divide {
-		height: 10px;
 	}
 }
 
@@ -134,14 +130,15 @@ main {
 		display: flex;
 	    justify-content: center;
 		min-height: 74vh;
-	    padding: 40px 0px;
-	 
-		img { height: 73vh;  }
+	    padding: 40px 0px; 
+		img { height: 73vh; }
+
 		@media (min-width: 992px) {
 			.student_mobile { display: none; }	
 			background: url(../img/background.jpg);
 			background-size: cover;
 		}
+
 		@media (max-width: 992px) {
 			.student_mobile { display: block; width: 100%; height: 100%; }
 			.student_desktop { display: none; }
