--- a/less/main.less
+++ b/less/main.less
@@ -105,83 +105,133 @@ header {
 }
 
 main {
-	/*height: 83vh;*/
+	min-height: 82.3vh;
+	/*application*/
+	.application_block_head{
+		height: 40vw;
+		min-height: 150px;
+		max-height: 250px;
+		background: url(../img/contacts_bg.png) no-repeat 50% 50%;
+		background-size: 100% 100%;
+	
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	
+		p{
+			text-transform: uppercase;
+			font-weight: bolder;
+			text-align:center;
+			color: @h-m-background;
+			font-size: 32px;
+		}
+	
+		border-bottom:  4px dashed @h-m-background;
+	}
+	
+	.application_block_text{
+		@paddParam: 15vw;
+		padding-left: @paddParam;
+		padding-right: @paddParam;
+		padding-top: 50px;
+	
+		p{
+			font-size: 18px;
+			margin-bottom: 0;
+			hyphens: auto;
+		}
+	
+		@media (max-width: 992px) {
+			padding-top: 0;
+	
+			p{
+				font-size: 16px;
+			}
+		}
+	}
+	
+	.application_block_button{
+		width: 100%;
+		height: 30vw;
+		min-height: 50px;
+		max-height: 150px;
+	
+		display: flex;
+	  	justify-content: center;
+	  	align-items: center;
+	
+		.application_button{
+			height: 50px;
+			width: 150px;
+	
+			p{
+				margin-top: 4px;
+				text-transform: uppercase;
+				font-weight: bolder;
+				text-align:center;
+				color: white;
+				font-size: 18px;
+			}
+	
+			background: @h-m-background;
+		}
+
+		.application_button:nth-child(2){
+			margin-left: 10px;
+		}
+	}
+
+	/*blank*/
+	.blank_container_center{
+		width: 100%;
+
+		display: flex;
+	  	justify-content: center;
+	  	align-items: center;
+
+	  	.blank_container{
+	  		width: 70%;
+	  		min-width: 300px;
+	  		/*background: #00f;*/
+
+	  		.blank_blackBox{
+	  			height: 250px;
+	  			margin-top: 30px;
+	  			background: #000;
+	  		}
+
+	  		.blank_container_blackCircle{
+	  			min-height: 50px;
+	  			margin-top: 20px;
+
+	  			padding-left: 10%;
+
+	  			/*background: #00f;*/
+
+	  			display: flex;
+	  			align-items: center;
+
+	  			.blackCircle{
+	  				width: 50px; 
+	  				height: 50px;
+					background: #000;
+					border-radius: 50%;
+
+					margin-right: 10px;
+	  			}
+
+	  			.blackText{
+	  				max-width: 75%;
+	  				font-size: 14px;
+	  			}
+	  		}
+	  	}
+	}
 }
 
 footer {
 	.header-footer-positiion;  
 	text-align: left;
 	p { margin: 10px 10px; color: white;}
-}
-
-/**/
-.application_block_head{
-	height: 40vw;
-	min-height: 150px;
-	max-height: 250px;
-	background: #000;
-
-	display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-	p{
-		text-transform: uppercase;
-		font-weight: bolder;
-		text-align:center;
-		color: @h-m-background;
-		font-size: 32px;
-	}
-
-	border-bottom:  4px dashed @h-m-background;
-}
-
-.application_block_text{
-	@paddParam: 15vw;
-	padding-left: @paddParam;
-	padding-right: @paddParam;
-	padding-top: 50px;
-
-	p{
-		font-size: 18px;
-		margin-bottom: 0;
-		hyphens: auto;
-	}
-
-	@media (max-width: 992px) {
-		padding-top: 0;
-
-		p{
-			font-size: 16px;
-		}
-	}
-}
-
-.application_block_button{
-	width: 100%;
-	height: 30vw;
-	min-height: 50px;
-	max-height: 150px;
-
-	display: flex;
-  	justify-content: center;
-  	align-items: center;
-  	flex-direction: column;
-
-	.application_button{
-		height: 50px;
-		width: 150px;
-
-		p{
-			margin-top: 4px;
-			text-transform: uppercase;
-			font-weight: bolder;
-			text-align:center;
-			color: white;
-			font-size: 18px;
-		}
-
-		background: @h-m-background;
-	}
 }
 
