--- a/less/main.less
+++ b/less/main.less
@@ -123,6 +123,10 @@ main {
 			text-align:center;
 			color: @h-m-background;
 			font-size: 50px;
+
+			@media (max-width: 992px) {
+				font-size: 40px;
+			}
 		}
 	
 		border-bottom:  4px dashed @h-m-background;
@@ -245,6 +249,7 @@ main {
     		        -khtml-user-select: none;
     		        -webkit-user-select: none;
     		        font-weight: bolder;
+    		        color: black;
 				}
 
 				.button:hover{
@@ -338,6 +343,11 @@ main {
 								margin-top: 10px;
 								margin-bottom: 10px;
 								width: 110%;
+
+								@media (max-width: 350px){
+									width: 100%;
+									margin-left: -5px;
+								}
 							}
 						}
 
